cmake_minimum_required(VERSION 3.20)
project(async_example)
set (CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
add_executable(demo src/main.cpp)
add_subdirectory(lib)
target_link_libraries(demo timer)
target_compile_options(demo PRIVATE -fno-asynchronous-unwind-tables)
